name:                pandoc-filter-svgmath
version:             0.1.0
synopsis:            A Pandoc filter for converting math to SVG.
description:         A Pandoc filter for converting math to SVG.
license:             MIT
license-file:        LICENSE
author:              Phil Ruffwind
maintainer:          rf@rufflewind.com
copyright:           (c) 2015 Phil Ruffwind
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable pandoc-filter-svgmath
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , containers >=0.5 && <0.6
                     , cryptonite >= 0.24 && < 0.25
                     , directory >=1.3 && <1.4
                     , filepath >=1.4 && <1.5
                     , temporary >=1.2 && <1.3
                     , optparse-applicative >= 0.13.2 && < 0.14
                     , process >=1.4 && <1.5
                     , pandoc-types >=1.17 && <1.18
                     , regex-posix >=0.95 && <0.96
                     , bytestring >=0.10 && <0.11
                     , text >=1.2 && <1.3
                     , xml >=1.3 && <1.4
  default-language:    Haskell2010
